Update top of modes page
* Show blurb based on mode type.
* Make the icon bigger and highlight it when mode is active.
* Increase spacing between elements.

Also eliminate some code duplication between header of mode page and header of icon picker.

Fixes: 355415875
Test: manual
Flag: android.app.modes_ui
Change-Id: I7e788b9b5920cedb791d1571b19b37e65ece6d0b

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -503,6 +503,9 @@
     <dimen name="audio_streams_qrcode_preview_radius">30dp</dimen>
 
     <!-- Zen Modes -->
+    <dimen name="zen_mode_header_size">136dp</dimen>
+    <dimen name="zen_mode_header_inner_icon_size">64dp</dimen>
+    <dimen name="zen_mode_blurb_text_size">16sp</dimen>
     <dimen name="zen_mode_icon_list_header_circle_diameter">90dp</dimen>
     <dimen name="zen_mode_icon_list_header_icon_size">48dp</dimen>
     <dimen name="zen_mode_icon_list_item_size">96dp</dimen>
