--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -517,4 +517,6 @@
     <dimen name="zen_mode_circular_icon_margin_between">4dp</dimen>
     <dimen name="zen_mode_circular_icon_margin_vertical">8dp</dimen>
     <dimen name="zen_mode_circular_icon_text_size">18dp</dimen>
+    <!-- For images in SetupInterstitialActivity -->
+    <dimen name="zen_mode_interstitial_corner_radius">30dp</dimen>
 </resources>
