[Audiosharing] Update dialog btn when start sharing with no extra connected device
There are two btns now: Pair new device and Show QR code
Pair new device -> go to Pair new device page
Show QR code -> go to QR code page

Test: atest
Flag: com.android.settingslib.flags.enable_le_audio_sharing
Bug: 305620450

Change-Id: Id5ddb66f1bbc3b02228a0d639bf30cdc40bef265

--- a/res/layout/dialog_custom_body_audio_sharing.xml
+++ b/res/layout/dialog_custom_body_audio_sharing.xml
@@ -44,6 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:contentDescription="@null"
+            android:paddingBottom="24dp"
             android:visibility="gone" />
 
         <androidx.recyclerview.widget.RecyclerView
