Add icons for segments in Mode page and (some) subpages
Fixes: 341996820
Test: manual (only visual changes)
Flag: android.app.modes_ui
Change-Id: I8b8b1cb7cfe610da60b34b32b479b3ffd79a2ac7

--- a/res/xml/modes_people_settings.xml
+++ b/res/xml/modes_people_settings.xml
@@ -26,10 +26,12 @@
 
       <Preference
           android:key="zen_mode_people_messages"
-          android:title="@string/zen_mode_messages_title"/>
+          android:title="@string/zen_mode_messages_title"
+          android:icon="@drawable/ic_zen_mode_people_messages" />
 
       <Preference
           android:key="zen_mode_people_calls"
-          android:title="@string/zen_mode_calls_title"/>
+          android:title="@string/zen_mode_calls_title"
+          android:icon="@drawable/ic_zen_mode_people_calls" />
    </PreferenceCategory>
 </PreferenceScreen>
