Fix jiggle when opening custom manual modes
Looks like setting Preference visibility in updateState() is too late to avoid an animation, and isAvailable() should be used instead. This forces us to split ZenModeSetTriggerLinkPreferenceController (which handled the category and its two children) into separate controllers for the category and each child. Although untangling this code was annoying, the result is arguably cleaner, since the two child preferences deal with different things.

Fixes: 355623101
Test: atest com.android.settings.notification.modes
Flag: android.app.modes_ui
Change-Id: I5fb1b3cbe424973b852f820ecf948491c050421f

--- a/res/xml/modes_rule_settings.xml
+++ b/res/xml/modes_rule_settings.xml
@@ -51,8 +51,7 @@
         <Preference
             android:key="zen_add_automatic_trigger"
             android:title="@string/zen_mode_select_schedule"
-            android:icon="@drawable/ic_add_24dp"
-            settings:isPreferenceVisible="false" />
+            android:icon="@drawable/ic_add_24dp" />
     </PreferenceCategory>
 
     <PreferenceCategory
