Fix a11y issues in the schedule editor
* Don't read start / end time as separate labels.
* Fix content description of day buttons (ToggleButton's stateDescription is textOn/textOff -- which are the same for this particular button, thus it wasn't possible to know whether a day was selected or not).

Fixes: 346396147
Test: manual, with Talkback
Flag: android.app.modes_ui
Change-Id: If73a791cf9bd62cf17e058c81a8051b3e7fd82ea

--- a/res/layout/modes_set_schedule_layout.xml
+++ b/res/layout/modes_set_schedule_layout.xml
@@ -48,7 +48,8 @@
             app:layout_constrainedWidth="true"
             app:layout_constraintHorizontal_bias="0"
             android:textAppearance="@*android:style/TextAppearance.DeviceDefault.Medium"
-            android:text="@string/zen_mode_start_time" />
+            android:text="@string/zen_mode_start_time"
+            android:importantForAccessibility="no" />
 
         <!-- Start time display + setter -->
         <TextView
@@ -85,7 +86,8 @@
             app:layout_constrainedWidth="true"
             app:layout_constraintHorizontal_bias="0"
             android:textAppearance="@*android:style/TextAppearance.DeviceDefault.Medium"
-            android:text="@string/zen_mode_end_time" />
+            android:text="@string/zen_mode_end_time"
+            android:importantForAccessibility="no" />
 
         <!-- End time setter; right-aligned -->
         <TextView
