Revert "Tweak Modes layouts and use updated strings to match mocks"
This reverts commit 0359aaeb47e66b1d7eda4e1291aaf7ef5d280627.

Reason for revert: <Potential culprit for b/356564046  - verifying through ABTD before revert submission. This is part of the standard investigation process, and does not mean your CL will be reverted.>

Change-Id: I980838773078d822d20608e5975a26cf8dbed2be

--- a/res/xml/modes_list_settings.xml
+++ b/res/xml/modes_list_settings.xml
@@ -20,12 +20,11 @@
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:title="@string/zen_modes_list_title">
 
-    <com.android.settingslib.widget.TopIntroPreference
-        android:title="@string/zen_modes_list_intro" />
+    <!-- TODO: b/333682392 - add strings for summary as appropriate -->
 
     <PreferenceCategory
         android:key="zen_modes_list">
-        <!-- Preferences leading to individual mode pages are added in this PreferenceCategory. -->
+        <!-- Preferences leading to rules are added in this PreferenceCategory. -->
     </PreferenceCategory>
 
     <Preference
