--- a/res/xml/modes_set_calendar.xml
+++ b/res/xml/modes_set_calendar.xml
@@ -23,18 +23,20 @@
     android:title="@string/zen_mode_set_calendar_title">
 
     <PreferenceCategory
-        android:key="zen_mode_event_category">
+        android:key="zen_mode_event_category"
+        android:title="@string/zen_mode_set_calendar_category_title">
 
+        <!-- TODO: b/333682392 - use correct strings for below two prefs -->
         <!-- During events for -->
         <DropDownPreference
             android:key="calendar"
-            android:title="@string/zen_mode_set_calendar_which_calendar"
+            android:title="@string/zen_mode_event_rule_calendar"
             android:summary="%s" />
 
         <!-- Where reply is -->
         <DropDownPreference
             android:key="reply"
-            android:title="@string/zen_mode_set_calendar_which_reply"
+            android:title="@string/zen_mode_event_rule_reply"
             android:summary="%s" />
 
     </PreferenceCategory>
