--- a/res/xml/accessibility_daltonizer_settings.xml
+++ b/res/xml/accessibility_daltonizer_settings.xml
@@ -33,6 +33,7 @@
         android:persistent="false"
         android:summary="@string/daltonizer_mode_deuteranomaly_summary"
         android:title="@string/daltonizer_mode_deuteranomaly_title"
+        settings:titleMaxLines="@integer/max_integer"
         settings:controller="com.android.settings.accessibility.DaltonizerRadioButtonPreferenceController" />
 
     <com.android.settingslib.widget.SelectorWithWidgetPreference
@@ -40,6 +41,7 @@
         android:persistent="false"
         android:summary="@string/daltonizer_mode_protanomaly_summary"
         android:title="@string/daltonizer_mode_protanomaly_title"
+        settings:titleMaxLines="@integer/max_integer"
         settings:controller="com.android.settings.accessibility.DaltonizerRadioButtonPreferenceController" />
 
     <com.android.settingslib.widget.SelectorWithWidgetPreference
@@ -47,12 +49,14 @@
         android:persistent="false"
         android:summary="@string/daltonizer_mode_tritanomaly_summary"
         android:title="@string/daltonizer_mode_tritanomaly_title"
+        settings:titleMaxLines="@integer/max_integer"
         settings:controller="com.android.settings.accessibility.DaltonizerRadioButtonPreferenceController" />
 
     <com.android.settingslib.widget.SelectorWithWidgetPreference
         android:key="daltonizer_mode_grayscale"
         android:persistent="false"
         android:title="@string/daltonizer_mode_grayscale_title"
+        settings:titleMaxLines="@integer/max_integer"
         settings:controller="com.android.settings.accessibility.DaltonizerRadioButtonPreferenceController" />
 
     <com.android.settings.widget.SeekBarPreference
