Settings search for Roaming
Fix: 351740003
Flag: EXEMPT bug fix
Test: manual - search roaming
Change-Id: I260449bdea7dcaae6a2d44c6810cf2638c18d9a4

--- a/res/xml/mobile_network_settings.xml
+++ b/res/xml/mobile_network_settings.xml
@@ -85,9 +85,10 @@
             android:summary="@string/auto_data_switch_summary"
             settings:controller="com.android.settings.network.telephony.AutoDataSwitchPreferenceController"/>
 
+        <!-- Settings search is handled by RoamingSearchItem. -->
         <com.android.settings.spa.preference.ComposePreference
             android:key="button_roaming_key"
-            android:title="@string/roaming"
+            settings:searchable="false"
             settings:controller="com.android.settings.network.telephony.RoamingPreferenceController"/>
 
         <Preference
