Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ieaf59078e8adaae4d3a03fe0ae3f47ec4e2e913a

--- a/res/values-fa/arrays.xml
+++ b/res/values-fa/arrays.xml
@@ -207,9 +207,9 @@
     <item msgid="3843484466100107397">"فوکوس صدا"</item>
     <item msgid="617344340943430125">"میزان کنترل"</item>
     <item msgid="1249691739381713634">"میزان صدا"</item>
-    <item msgid="6485000384018554920">"حجم حلقه"</item>
+    <item msgid="6485000384018554920">"صدای زنگ"</item>
     <item msgid="3378000878531336372">"میزان صدای رسانه"</item>
-    <item msgid="5272927168355895681">"میزان صدای زنگ ساعت"</item>
+    <item msgid="5272927168355895681">"صدای زنگ هشدار"</item>
     <item msgid="4422070755065530548">"میزان صدای اعلان"</item>
     <item msgid="3250654589277825306">"میزان صدای بلوتوث"</item>
     <item msgid="4212187233638382465">"بیدار باش"</item>
@@ -274,9 +274,9 @@
     <item msgid="5651140069431283570">"فوکوس صدا"</item>
     <item msgid="745291221457314879">"میزان صدای اصلی"</item>
     <item msgid="4722479281326245754">"میزان صدای مکالمه"</item>
-    <item msgid="6749550886745567276">"میزان صدای زنگ"</item>
+    <item msgid="6749550886745567276">"صدای زنگ"</item>
     <item msgid="2218685029915863168">"میزان صدای رسانه"</item>
-    <item msgid="4266577290496513640">"میزان صدای زنگ ساعت"</item>
+    <item msgid="4266577290496513640">"صدای زنگ هشدار"</item>
     <item msgid="8608084169623998854">"میزان صدای اعلان"</item>
     <item msgid="7948784184567841794">"میزان صدای بلوتوث"</item>
     <item msgid="1148968792599973150">"بیدار باش"</item>
@@ -416,12 +416,12 @@
     <item msgid="2047166446768045816">"محدودنشده حساب شود"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
-    <item msgid="91222619458919148">"‏استفاده از MAC تصادفی"</item>
+    <item msgid="91222619458919148">"‏استفاده کردن از MAC تصادفی"</item>
     <item msgid="741680937828608749">"‏استفاده از MAC دستگاه"</item>
   </string-array>
   <string-array name="wifi_dhcp_entries">
-    <item msgid="2532836996945493932">"نام دستگاه به شبکه ارسال شود"</item>
-    <item msgid="7928900271137707489">"نام دستگاه به شبکه ارسال نشود"</item>
+    <item msgid="2532836996945493932">"ارسال کردن نام دستگاه به شبکه"</item>
+    <item msgid="7928900271137707489">"ارسال نکردن نام دستگاه به شبکه"</item>
   </string-array>
   <string-array name="wifi_hidden_entries">
     <item msgid="342232116597649254">"نه"</item>
@@ -498,4 +498,15 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="6386593780953863398">"وقت خواب"</item>
+    <item msgid="4152450357280759894">"رانندگی"</item>
+    <item msgid="7096549258219399423">"فراگیر"</item>
+    <item msgid="2760716776980432977">"مدیریت‌شده"</item>
+    <item msgid="601734478369121764">"ستاره"</item>
+    <item msgid="6243809315432780521">"تقویم"</item>
+    <item msgid="4913577903148415331">"زمان"</item>
+    <item msgid="3653377604690057780">"تئاتر"</item>
+    <item msgid="3843711267408385410">"گل"</item>
+  </string-array>
 </resources>
