--- a/res/values-iw/arrays.xml
+++ b/res/values-iw/arrays.xml
@@ -412,11 +412,11 @@
   </string-array>
   <string-array name="wifi_metered_entries">
     <item msgid="3237321077949659241">"זיהוי אוטומטי"</item>
-    <item msgid="3779092145391320375">"יש להתייחס כרשת עם חיוב לפי שימוש בנתונים"</item>
-    <item msgid="2047166446768045816">"יש להתייחס כרשת שבה החיוב הוא לא לפי שימוש בנתונים"</item>
+    <item msgid="3779092145391320375">"הגדרה כרשת עם חיוב לפי שימוש בנתונים"</item>
+    <item msgid="2047166446768045816">"הגדרה כרשת שבה החיוב הוא לא לפי שימוש בנתונים"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
-    <item msgid="91222619458919148">"‏שימוש ב-MAC בסדר אקראי"</item>
+    <item msgid="91222619458919148">"‏שימוש בכתובת MAC אקראית"</item>
     <item msgid="741680937828608749">"‏שימוש בכתובת ה-MAC של המכשיר"</item>
   </string-array>
   <string-array name="wifi_dhcp_entries">
@@ -498,4 +498,15 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="6386593780953863398">"מנוחה"</item>
+    <item msgid="4152450357280759894">"נהיגה"</item>
+    <item msgid="7096549258219399423">"ריכוז"</item>
+    <item msgid="2760716776980432977">"בשליטה"</item>
+    <item msgid="601734478369121764">"כוכב"</item>
+    <item msgid="6243809315432780521">"יומן"</item>
+    <item msgid="4913577903148415331">"שעה"</item>
+    <item msgid="3653377604690057780">"תיאטרון"</item>
+    <item msgid="3843711267408385410">"פרח"</item>
+  </string-array>
 </resources>
