--- a/res/values-mr/arrays.xml
+++ b/res/values-mr/arrays.xml
@@ -133,7 +133,7 @@
   <string-array name="wifi_proxy_settings">
     <item msgid="4669222334822978847">"काहीही नाही"</item>
     <item msgid="6242198071587397280">"मॅन्युअल"</item>
-    <item msgid="464383874780058242">"प्रॉक्सी ऑटो-कॉंफिग"</item>
+    <item msgid="464383874780058242">"प्रॉक्सी ऑटो-कॉन्फिगरेशन"</item>
   </string-array>
   <string-array name="apn_auth_entries">
     <item msgid="2900892411844440682">"काहीही नाही"</item>
@@ -411,9 +411,9 @@
     <item msgid="9080166583718385565">"०"</item>
   </string-array>
   <string-array name="wifi_metered_entries">
-    <item msgid="3237321077949659241">"आपोआप शोधा"</item>
-    <item msgid="3779092145391320375">"मर्यादित डेटा वापराचे नेटवर्क"</item>
-    <item msgid="2047166446768045816">"अमर्याद डेटा वापराचे नेटवर्क"</item>
+    <item msgid="3237321077949659241">"आपोआप डिटेक्ट करा"</item>
+    <item msgid="3779092145391320375">"मर्यादित डेटा वापराचे नेटवर्क म्हणून हाताळा"</item>
+    <item msgid="2047166446768045816">"अमर्याद डेटा वापराचे नेटवर्क म्हणून हाताळा"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
     <item msgid="91222619458919148">"रँडमाइझ केलेले MAC वापरा"</item>
@@ -498,4 +498,15 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="6386593780953863398">"बेडटाइम"</item>
+    <item msgid="4152450357280759894">"ड्रायव्हिंग"</item>
+    <item msgid="7096549258219399423">"इमर्सिव्ह"</item>
+    <item msgid="2760716776980432977">"व्यवस्थापित"</item>
+    <item msgid="601734478369121764">"तारा"</item>
+    <item msgid="6243809315432780521">"कॅलेंडर"</item>
+    <item msgid="4913577903148415331">"वेळ"</item>
+    <item msgid="3653377604690057780">"थिएटर"</item>
+    <item msgid="3843711267408385410">"फूल"</item>
+  </string-array>
 </resources>
