--- a/res/values-ne/arrays.xml
+++ b/res/values-ne/arrays.xml
@@ -412,16 +412,16 @@
   </string-array>
   <string-array name="wifi_metered_entries">
     <item msgid="3237321077949659241">"स्वतः पत्ता लगाउनुहोस्"</item>
-    <item msgid="3779092145391320375">"सशुल्क Wi-Fi का रूपमा लिइयोस्"</item>
-    <item msgid="2047166446768045816">"नि:शुल्क Wi-Fi का रूपमा लिइयोस्"</item>
+    <item msgid="3779092145391320375">"सशुल्क Wi-Fi का रूपमा लिनुहोस्"</item>
+    <item msgid="2047166446768045816">"नि:शुल्क Wi-Fi का रूपमा लिनुहोस्"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
     <item msgid="91222619458919148">"र्‍यान्डमाइज गरिएको MAC प्रयोग गर्नुहोस्"</item>
     <item msgid="741680937828608749">"डिभाइसको MAC प्रयोग गर्नुहोस्"</item>
   </string-array>
   <string-array name="wifi_dhcp_entries">
-    <item msgid="2532836996945493932">"नेटवर्कलाई डिभाइसको नाम पठाउनुहोस्"</item>
-    <item msgid="7928900271137707489">"नेटवर्कलाई डिभाइसको नाम नपठाउनुहोस्"</item>
+    <item msgid="2532836996945493932">"नेटवर्कमा डिभाइसको नाम पठाउनुहोस्"</item>
+    <item msgid="7928900271137707489">"नेटवर्कमा डिभाइसको नाम नपठाउनुहोस्"</item>
   </string-array>
   <string-array name="wifi_hidden_entries">
     <item msgid="342232116597649254">"छैन"</item>
@@ -498,4 +498,15 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="6386593780953863398">"सुत्ने समय"</item>
+    <item msgid="4152450357280759894">"ड्राइभिङ"</item>
+    <item msgid="7096549258219399423">"इमर्सिभ"</item>
+    <item msgid="2760716776980432977">"व्यवस्थापन गरिएका"</item>
+    <item msgid="601734478369121764">"तारा"</item>
+    <item msgid="6243809315432780521">"पात्रो"</item>
+    <item msgid="4913577903148415331">"समय"</item>
+    <item msgid="3653377604690057780">"नाटकघर"</item>
+    <item msgid="3843711267408385410">"फूल"</item>
+  </string-array>
 </resources>
