--- a/res/values-or/arrays.xml
+++ b/res/values-or/arrays.xml
@@ -128,12 +128,12 @@
   </string-array>
   <string-array name="wifi_ip_settings">
     <item msgid="6665889765350160154">"DHCP"</item>
-    <item msgid="6215795691318745695">"ଷ୍ଟାଟିକ୍"</item>
+    <item msgid="6215795691318745695">"ଷ୍ଟାଟିକ"</item>
   </string-array>
   <string-array name="wifi_proxy_settings">
     <item msgid="4669222334822978847">"କିଛି ନାହିଁ"</item>
-    <item msgid="6242198071587397280">"ମାନୁଆଲ୍‌"</item>
-    <item msgid="464383874780058242">"ପ୍ରକ୍ସି ଅଟୋ-କନଫିଗରେସନ୍"</item>
+    <item msgid="6242198071587397280">"ମାନୁଆଲ"</item>
+    <item msgid="464383874780058242">"ପ୍ରକ୍ସି ଅଟୋ-କନଫିଗରେସନ"</item>
   </string-array>
   <string-array name="apn_auth_entries">
     <item msgid="2900892411844440682">"କିଛି ନୁହେଁ"</item>
@@ -360,7 +360,7 @@
     <item msgid="3605616699204153590">"ନାଭିଗେସନ୍ ବାର୍"</item>
   </string-array>
   <string-array name="accessibility_button_gesture_selector_titles">
-    <item msgid="2370918472773154939">"ବଟନ୍"</item>
+    <item msgid="2370918472773154939">"ବଟନ"</item>
     <item msgid="6922258575853746220">"ଜେଶ୍ଚର୍"</item>
   </string-array>
   <string-array name="accessibility_button_size_selector_titles">
@@ -412,8 +412,8 @@
   </string-array>
   <string-array name="wifi_metered_entries">
     <item msgid="3237321077949659241">"ସ୍ୱତଃ ଡିଟେକ୍ଟ କରନ୍ତୁ"</item>
-    <item msgid="3779092145391320375">"ମିଟର୍ ହୋଇଥିବା ରୂପେ ବିବେଚନା କରନ୍ତୁ"</item>
-    <item msgid="2047166446768045816">"ମିଟର୍ ହୋଇନଥିବା ରୂପେ ବିବେଚନା କରନ୍ତୁ"</item>
+    <item msgid="3779092145391320375">"ମିଟର ହୋଇଥିବା ରୂପେ ବିବେଚନା କରନ୍ତୁ"</item>
+    <item msgid="2047166446768045816">"ମିଟର ହୋଇନଥିବା ରୂପେ ବିବେଚନା କରନ୍ତୁ"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
     <item msgid="91222619458919148">"ରେଣ୍ଡମାଇଜ କରାଯାଇଥିବା MAC ବ୍ୟବହାର କରନ୍ତୁ"</item>
@@ -498,4 +498,15 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="6386593780953863398">"ଶୋଇବା ସମୟ"</item>
+    <item msgid="4152450357280759894">"ଡ୍ରାଇଭିଂ"</item>
+    <item msgid="7096549258219399423">"ଇମର୍ସିଭ"</item>
+    <item msgid="2760716776980432977">"ପରିଚାଳିତ ହୋ‍ଇଛି"</item>
+    <item msgid="601734478369121764">"ଷ୍ଟାର"</item>
+    <item msgid="6243809315432780521">"କେଲେଣ୍ଡର"</item>
+    <item msgid="4913577903148415331">"ସମୟ"</item>
+    <item msgid="3653377604690057780">"ଥିଏଟର"</item>
+    <item msgid="3843711267408385410">"ଫୁଲ"</item>
+  </string-array>
 </resources>
