--- a/res/values-pt-rPT/arrays.xml
+++ b/res/values-pt-rPT/arrays.xml
@@ -420,8 +420,8 @@
     <item msgid="741680937828608749">"Usar MAC do dispositivo"</item>
   </string-array>
   <string-array name="wifi_dhcp_entries">
-    <item msgid="2532836996945493932">"Enviar nome do dispositivo para a rede"</item>
-    <item msgid="7928900271137707489">"Não enviar nome do dispositivo para a rede"</item>
+    <item msgid="2532836996945493932">"Enviar nome do dispositivo à rede"</item>
+    <item msgid="7928900271137707489">"Não enviar nome do dispositivo à rede"</item>
   </string-array>
   <string-array name="wifi_hidden_entries">
     <item msgid="342232116597649254">"Não"</item>
@@ -498,4 +498,15 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="6386593780953863398">"Hora de dormir"</item>
+    <item msgid="4152450357280759894">"Condução"</item>
+    <item msgid="7096549258219399423">"Envolvente"</item>
+    <item msgid="2760716776980432977">"Gerido"</item>
+    <item msgid="601734478369121764">"Estrela"</item>
+    <item msgid="6243809315432780521">"Calendário"</item>
+    <item msgid="4913577903148415331">"Horas"</item>
+    <item msgid="3653377604690057780">"Cinema"</item>
+    <item msgid="3843711267408385410">"Flor"</item>
+  </string-array>
 </resources>
