--- a/res/values-sk/arrays.xml
+++ b/res/values-sk/arrays.xml
@@ -420,8 +420,8 @@
     <item msgid="741680937828608749">"Používať adresu MAC zariadenia"</item>
   </string-array>
   <string-array name="wifi_dhcp_entries">
-    <item msgid="2532836996945493932">"Odoslať názov zariadenia sieti"</item>
-    <item msgid="7928900271137707489">"Neodoslať názov zariadenia sieti"</item>
+    <item msgid="2532836996945493932">"Odosielať názov zariadenia sieti"</item>
+    <item msgid="7928900271137707489">"Neodosielať názov zariadenia sieti"</item>
   </string-array>
   <string-array name="wifi_hidden_entries">
     <item msgid="342232116597649254">"Nie"</item>
@@ -498,4 +498,15 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="6386593780953863398">"Večierka"</item>
+    <item msgid="4152450357280759894">"Intenzívne"</item>
+    <item msgid="7096549258219399423">"Pútavé"</item>
+    <item msgid="2760716776980432977">"Spravované"</item>
+    <item msgid="601734478369121764">"Hviezda"</item>
+    <item msgid="6243809315432780521">"Kalendár"</item>
+    <item msgid="4913577903148415331">"Čas"</item>
+    <item msgid="3653377604690057780">"Kino"</item>
+    <item msgid="3843711267408385410">"Kvet"</item>
+  </string-array>
 </resources>
