Make the a11y descriptions of icon options more literal
E.g. "briefcase" instead of "work"

Bug: 333901673
Test: manual, with Talkback
Flag: android.app.modes_ui
Change-Id: I4364820a82a7ba4b1345c2e0fea571ee7b6c4e6f

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1555,26 +1555,26 @@
     <!-- Descriptions of the icons in zen_mode_icon_options. Should describe the associated image
          [CHAR LIMIT=NONE] -->
     <string-array name="zen_mode_icon_options_descriptions">
-        <item>Bedtime</item>
-        <item>Driving</item>
-        <item>Immersive</item>
+        <item>Half-moon</item>
+        <item>Car</item>
+        <item>Person\'s mind</item>
         <item>Calendar</item>
-        <item>Time</item>
-        <item>Beach</item>
-        <item>Camping</item>
-        <item>Theater</item>
-        <item>Gaming</item>
-        <item>Gym</item>
-        <item>Ball sports</item>
-        <item>Martial arts</item>
+        <item>Clock</item>
+        <item>Beach umbrella</item>
+        <item>Tent</item>
+        <item>Film reel</item>
+        <item>Game controller</item>
+        <item>Gym dumbbell</item>
+        <item>Person throwing ball</item>
+        <item>Person kicking</item>
         <item>Swimming</item>
-        <item>Hiking</item>
+        <item>Person hiking</item>
         <item>Golf</item>
-        <item>Workshop</item>
-        <item>Work</item>
+        <item>Workshop tools</item>
+        <item>Briefcase</item>
         <item>Star</item>
-        <item>Zen</item>
-        <item>Managed</item>
+        <item>Lotus flower</item>
+        <item>Supervisor</item>
     </string-array>
 
     <!-- Packages that will not show Display over other apps permission -->
