--- a/res/layout-land/mode_interstitial_layout.xml
+++ b/res/layout-land/mode_interstitial_layout.xml
@@ -114,7 +114,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
+                android:scaleType="fitCenter"
                 android:layout_gravity="center" />
 
         </FrameLayout>
