--- a/res/layout/mode_interstitial_layout.xml
+++ b/res/layout/mode_interstitial_layout.xml
@@ -56,7 +56,7 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:clickable="false"
-                android:scaleType="centerCrop"
+                android:scaleType="fitCenter"
                 android:layout_gravity="center" />
 
         </FrameLayout>
@@ -78,7 +78,7 @@
             android:clickable="false"
             android:text="@string/zen_mode_setup_page_summary"
             android:textSize="18sp"
-            android:paddingBottom="12dp"
+            android:paddingBottom="18dp"
             android:textAppearance="@*android:style/TextAppearance.DeviceDefault.Body1"
             app:layout_constraintBottom_toTopOf="@+id/enable_mode_button" />
 
