--- a/res/values-es-rUS/arrays.xml
+++ b/res/values-es-rUS/arrays.xml
@@ -121,7 +121,7 @@
   <string-array name="wifi_proxy_settings">
     <item msgid="4669222334822978847">"Ninguno"</item>
     <item msgid="6242198071587397280">"Manual"</item>
-    <item msgid="464383874780058242">"Config. automática proxy"</item>
+    <item msgid="464383874780058242">"Config. automática de proxy"</item>
   </string-array>
   <string-array name="apn_auth_entries">
     <item msgid="2900892411844440682">"Ninguno"</item>
