--- a/res/values-fa/arrays.xml
+++ b/res/values-fa/arrays.xml
@@ -404,7 +404,7 @@
     <item msgid="2047166446768045816">"محدودنشده حساب شود"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
-    <item msgid="3485945604919292489">"‏استفاده از MAC تصادفی (پیش‌فرض)"</item>
+    <item msgid="3485945604919292489">"‏استفاده کردن از MAC تصادفی (پیش‌فرض)"</item>
     <item msgid="741680937828608749">"‏استفاده از MAC دستگاه"</item>
   </string-array>
   <string-array name="wifi_hidden_entries">
