--- a/res/values-hr/arrays.xml
+++ b/res/values-hr/arrays.xml
@@ -401,7 +401,7 @@
   <string-array name="wifi_metered_entries">
     <item msgid="3237321077949659241">"Automatsko otkrivanje"</item>
     <item msgid="3779092145391320375">"Mreža s ograničenim prometom"</item>
-    <item msgid="2047166446768045816">"Mreža bez ograničenja prometa"</item>
+    <item msgid="2047166446768045816">"Mreža bez ograničenog prometa"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
     <item msgid="3485945604919292489">"Koristi nasumičnu MAC adresu (zadano)"</item>
