--- a/res/values-mr/arrays.xml
+++ b/res/values-mr/arrays.xml
@@ -121,7 +121,7 @@
   <string-array name="wifi_proxy_settings">
     <item msgid="4669222334822978847">"काहीही नाही"</item>
     <item msgid="6242198071587397280">"मॅन्युअल"</item>
-    <item msgid="464383874780058242">"प्रॉक्सी ऑटो-कॉंफिग"</item>
+    <item msgid="464383874780058242">"प्रॉक्सी ऑटो-कॉन्फिगरेशन"</item>
   </string-array>
   <string-array name="apn_auth_entries">
     <item msgid="2900892411844440682">"काहीही नाही"</item>
@@ -399,9 +399,9 @@
     <item msgid="9080166583718385565">"०"</item>
   </string-array>
   <string-array name="wifi_metered_entries">
-    <item msgid="3237321077949659241">"आपोआप शोधा"</item>
-    <item msgid="3779092145391320375">"मर्यादित डेटा वापराचे नेटवर्क"</item>
-    <item msgid="2047166446768045816">"अमर्याद डेटा वापराचे नेटवर्क"</item>
+    <item msgid="3237321077949659241">"आपोआप डिटेक्ट करा"</item>
+    <item msgid="3779092145391320375">"मर्यादित डेटा वापराचे नेटवर्क म्हणून हाताळा"</item>
+    <item msgid="2047166446768045816">"अमर्याद डेटा वापराचे नेटवर्क म्हणून हाताळा"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
     <item msgid="3485945604919292489">"रँडमाइझ केलेले MAC वापरा (डीफॉल्ट)"</item>
