--- a/res/values-ne/arrays.xml
+++ b/res/values-ne/arrays.xml
@@ -400,8 +400,8 @@
   </string-array>
   <string-array name="wifi_metered_entries">
     <item msgid="3237321077949659241">"स्वतः पत्ता लगाउनुहोस्"</item>
-    <item msgid="3779092145391320375">"सशुल्क Wi-Fi का रूपमा लिइयोस्"</item>
-    <item msgid="2047166446768045816">"नि:शुल्क Wi-Fi का रूपमा लिइयोस्"</item>
+    <item msgid="3779092145391320375">"सशुल्क Wi-Fi का रूपमा लिनुहोस्"</item>
+    <item msgid="2047166446768045816">"नि:शुल्क Wi-Fi का रूपमा लिनुहोस्"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
     <item msgid="3485945604919292489">"क्रमरहित MAC प्रयोग गर्नुहोस् (डिफल्ट)"</item>
