--- a/res/values-or/arrays.xml
+++ b/res/values-or/arrays.xml
@@ -116,12 +116,12 @@
   </string-array>
   <string-array name="wifi_ip_settings">
     <item msgid="6665889765350160154">"DHCP"</item>
-    <item msgid="6215795691318745695">"ଷ୍ଟାଟିକ୍"</item>
+    <item msgid="6215795691318745695">"ଷ୍ଟାଟିକ"</item>
   </string-array>
   <string-array name="wifi_proxy_settings">
     <item msgid="4669222334822978847">"କିଛି ନାହିଁ"</item>
-    <item msgid="6242198071587397280">"ମାନୁଆଲ୍‌"</item>
-    <item msgid="464383874780058242">"ପ୍ରକ୍ସି ଅଟୋ-କନଫିଗରେସନ୍"</item>
+    <item msgid="6242198071587397280">"ମାନୁଆଲ"</item>
+    <item msgid="464383874780058242">"ପ୍ରକ୍ସି ଅଟୋ-କନଫିଗରେସନ"</item>
   </string-array>
   <string-array name="apn_auth_entries">
     <item msgid="2900892411844440682">"କିଛି ନୁହେଁ"</item>
@@ -400,8 +400,8 @@
   </string-array>
   <string-array name="wifi_metered_entries">
     <item msgid="3237321077949659241">"ସ୍ୱତଃ ଡିଟେକ୍ଟ କରନ୍ତୁ"</item>
-    <item msgid="3779092145391320375">"ମିଟର୍ ହୋଇଥିବା ରୂପେ ବିବେଚନା କରନ୍ତୁ"</item>
-    <item msgid="2047166446768045816">"ମିଟର୍ ହୋଇନଥିବା ରୂପେ ବିବେଚନା କରନ୍ତୁ"</item>
+    <item msgid="3779092145391320375">"ମିଟର ହୋଇଥିବା ରୂପେ ବିବେଚନା କରନ୍ତୁ"</item>
+    <item msgid="2047166446768045816">"ମିଟର ହୋଇନଥିବା ରୂପେ ବିବେଚନା କରନ୍ତୁ"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
     <item msgid="3485945604919292489">"ରେଣ୍ଡମାଇଜ୍ଡ MAC ବ୍ୟବହାର କରନ୍ତୁ (ଡିଫଲ୍ଟ)"</item>
