--- a/res/values-te/arrays.xml
+++ b/res/values-te/arrays.xml
@@ -405,7 +405,7 @@
   </string-array>
   <string-array name="wifi_privacy_entries">
     <item msgid="3485945604919292489">"ర్యాండ‌మ్‌గా రూపొందించిన MAC అడ్రస్‌ను ఉపయోగించండి (ఆటోమేటిక్‌)"</item>
-    <item msgid="741680937828608749">"పరికర MAC అడ్రస్‌ని ఉపయోగించండి"</item>
+    <item msgid="741680937828608749">"పరికర MAC అడ్రస్‌ను ఉపయోగించండి"</item>
   </string-array>
   <string-array name="wifi_hidden_entries">
     <item msgid="342232116597649254">"లేదు"</item>
